---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: ????
  Features:
    - Using the hotkey while hovering over a pipe, pump, or storage tank will open its fluid's material page
    - Added support for the /retranslate-all-dictionaries command, which will retranslate all of your dictionaries
    - Added support for variable probability results in recipes
  Bugfixes:
    - Fixed a crash when a recipe's product didn't have an amount specified
    - Fixed a crash when there is more than one player on the map in some cases
    - Fixed the translation module doing extraneous translating
    - Fixed the translation module would never stop translating if the previous translation finished before you restarted it

---------------------------------------------------------------------------------------------------
Version: 1.0.0
Date: 2020-02-09
  Features:
    - Initial release